# Forensic-Biometrics-Studio

./: .gitignore  jest.setup.ts  package.json  pnpm-lock.yaml  tmp_dec.txt
__tests__/unit/: autoMarkWithSourceafis.mapping.test.ts
presets/: english-marking-types-fingerprint-default.json  english-marking-types-shoeprint-default.json  marking-types-fingerprint-default.json  marking-types-shoeprint-default.json  polish-marking-types-fingerprint-default.json  polish-marking-types-shoeprint-default.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/tauri-plugin-single-instance/: .cargo_vcs_info.json  Cargo.toml
src-tauri/tauri-plugin-single-instance/src/platform_impl/: windows.rs
src/@types/: i18next.d.ts
src/app/: layout.tsx
src/components/: FftEditor.tsx
src/components/edit-window/: edit-window.tsx
src/components/settings-window/: settings-window.tsx
src/components/toolbar/: measurement-panel.tsx  tracing-panel.tsx  vertical-toolbar.tsx
src/components/ui/: kbd.tsx  key-capture-dialog.tsx
src/lib/: fftProcessor.ts
src/lib/hooks/: useAppMount.tsx  useKeyDown.tsx  useKeyboardLayout.tsx  useKeyboardShortcuts.tsx  useSettingsSync.tsx
src/lib/locales/: translation.ts
src/lib/markings/: DistanceMarking.ts  FreehandMarking.ts  LineSegmentMarking.ts  MARKING_CLASS.ts  MeasurementMarking.ts  PointsMarkingClass.ts  PolygonMarking.ts  PolylineMarking.ts  TriangleMarking.ts
src/types/: spark-md5.d.ts
(+95 files in other folders)
