[package]
name = "biometrics-studio"
version = "0.6.10"
description = "Application for forensic trace comparison"
authors = ["Cyprian Zdebski", "Konrad Boryś", "Marcel Gańczarczyk"]
license = ""
repository = ""
default-run = "biometrics-studio"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-single-instance = "2.2.0"
tauri-plugin-window-state = "2.2.1"
tauri-plugin-store = "2.1.0"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
uuid = { version = "1.8.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[patch.crates-io]
tauri-plugin-single-instance = { path = 'tauri-plugin-single-instance' }
